changing the manual mapping of patient Mapper to the builder pattern